src/index.css
body {
  margin: 0;
}

.visualisationBox {
  background-color: rgb(255, 255, 255);
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  grid-template-columns: repeat(6, 1fr);
}

.visualisationBackground {
  position: relative;
  transform-origin: 0 0;
  transition: transform 0.2s ease-out;
}

.visualisationForeground {
  position: absolute;
  inset: 250px 0px 0px 0px;
}

.scrollableBox {
  width: 90vw;
  height: 90vh;
  overflow: auto;
  margin: 20px auto;
  user-select: none;
}

.connections {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.semesterTitles {
  font-family: "Inter", sans-serif;
  font-weight: 600;
  font-size: 32px;
  padding-top: 100px;
  margin-bottom: 0;
}

.semesterSubtitles {
  font-family: "Inter", sans-serif;
  font-weight: 300;
  font-size: 18px;
  margin-top: 10px;
}

.semesterColumn {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
}

.bigTitle {
  font-family: "Inter", sans-serif;
  font-weight: 600;
  font-size: 28px;
  text-align: center;
}

.bigSubTitle {
  font-family: "Inter", sans-serif;
  font-weight: 300;
  font-size: 20px;
  margin-top: 0;
  text-align: center;
}

.zoomButton {
   font-family: "Inter", sans-serif;
   font-weight: 500;
   border: 2px solid rgb(192, 192, 192);
   border-radius: 5px;
}

.subjectDetailMenuBox {
  position: fixed;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -40%);
  z-index: 1000;
  background-color: white;
  padding: 15px;
  border: 3px solid #a000a0;
  border-radius: 14px;
  height: 70vh;
  width: 90vw;
  opacity: 0;
  transition: opacity 0.2s ease, transform 0.3s ease;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  overflow: scroll;
  background-image: linear-gradient(160deg, #ffffff 0%, #fdd1ff 100%);
}

.menuBoxSubjectsContainer {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    padding: 0;
    margin: 0 0;
    height: 100%;
    width: 100%;
    overflow-y: hidden;
    overflow-x: auto;
  }

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
  transition: opacity 0.3s ease;
}


.openingBox {
  opacity: 1;
  transform: translate(-50%, -50%);
}

.closingBox {
  opacity: 0;
  transform: translate(-50%, -40%);
}

.openingOverlay {
  opacity: 1;
}

.closingOverlay {
  opacity: 0;
}


/* transition musí být v základním selektoru */
.choiceConnection circle,
.choiceConnection line {
  transition: stroke 0.2s ease-in-out;
}

.choiceConnection polygon,
.choiceConnection text {
  transition: fill 0.2s ease-in-out;
}

.choiceConnection:hover circle,
.choiceConnection:hover line
{
  stroke: #a000a0;
}

.choiceConnection:hover polygon,
.choiceConnection:hover text {
  fill: #a000a0;
}

.big-button {
  font-family: "Inter", sans-serif;
  font-weight: 500;
  border-radius: 50px;
  color: white;
  cursor: pointer;
  padding: 20px;
  background: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0) 50%,
    rgba(255, 255, 255, 0.8) 60%,
    rgba(255, 255, 255, 0) 70%
  ), var(--button-color, #a000a0);
  background-size: 200% 100%;
  transform: translate(0px, 0px);
  transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;
  animation: shine-reverse 0.5s cubic-bezier(0.40,0.00,0.20,1.00) 1;
}

.big-button:hover {
  animation: shine 0.5s cubic-bezier(0.40,0.00,0.20,1.00) 1;
  transform: translate(0px, -10px);
  box-shadow: var(--glow-color, #a000a033) 0px 0px 10px 5px;
}

@keyframes shine {
  0% {
    background-position: 200%;
  }
  100% {
    background-position: 0%;
  }
}

@keyframes shine-reverse {
  0% {
    background-position: 0%;
  }
  100% {
    background-position: 200%;
  }
}

