fix: connections aren't cropped now

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
 }
 
 .visualisationBackground {
-  position: relative;
   transform-origin: 0 0;
   transition: transform 0.2s ease-out;
 }
@@ -34,8 +33,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  overflow: visible;
 }
 
 .semesterTitles {
